feat(reranker): moteur Cross-Encoder ONNX exécuté dans la JVM (lot 2, étape 2)
Un Cross-Encoder n'est qu'un encodeur à tête de classification : tokeniser la
paire (requête, passage), un passage avant, un logit. Ni Python ni conteneur
dédié n'y sont nécessaires.

spectra.reranker.engine=onnx active OnnxCrossEncoderReranker, qui charge
model.onnx + tokenizer.json depuis ./data/models/reranker — même convention que
les GGUF. engine=http reste le DÉFAUT : le moteur ONNX exige un artefact local et
l'imposer casserait les installations ayant SPECTRA_RERANKER_ENABLED=true. Les
deux implémentations satisfont RerankerClient, donc bascule et retour arrière
sont une propriété de configuration, comme prévu par l'audit.

ONNX Runtime est appelé directement plutôt qu'à travers l'abstraction DJL —
inflexion assumée par rapport au plan initial. Le barème des scores, la
troncature de la paire et les entrées fournies au graphe sont exactement les
réglages qui déplacent un classement sans lever d'erreur ; les confier à une
couche de conventions rendrait la comparaison à la référence de parité
ininterprétable. DJL n'est conservé que pour ai.djl.huggingface:tokenizers, le
binding JNI de la bibliothèque Rust utilisée par transformers — donc les mêmes
input_ids, condition des mêmes scores. Vérifié : le natif est extrait du jar,
sans téléchargement à l'exécution.

Trois détails silencieux traités :
- seules les entrées déclarées par le graphe sont fournies (les modèles XLM-R,
  dont le multilingue configuré par défaut, n'exposent pas toujours
  token_type_ids, et une entrée inconnue fait échouer la session) ;
- rembourrage au plus long du lot avec masque d'attention à 0, sans quoi le
  score d'un passage dépendrait de la composition du lot ;
- une sortie qui n'est ni [lot, 1] ni [lot] est rejetée explicitement, plutôt que
  réduite à un classement plausible mais faux.

Deux régimes de défaillance distincts et délibérés : un modèle absent est un
problème d'approvisionnement, donc dégradatio